# flake8-2020

./: README.md  azure-pipelines.yml  flake8_2020.py  setup.cfg  tox.ini
tests/: flake8_2020_test.py
