[metadata]
name = flake8_2020
version = 1.3.0
description = flake8 plugin which checks for misuse of `sys.version` or `sys.version_info`
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/flake8-2020
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
py_modules = flake8_2020
install_requires =
    flake8>=3.7
    importlib-metadata>=0.9;python_version<="3.7"
python_requires = >=3.6

[options.entry_points]
flake8.extension =
    YTT=flake8_2020:Plugin

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
